@@ -30,6 +30,12 @@
 - Added hash-mode: md5(md5(md5($pass).$salt1).$salt2)
 
 ##
+## Features
+##
+
+- Added new feature (-Y) that creates N virtual instances for each device in your system at the cost of N times the device memory consumption
+
+##
 ## Performance
 ##
 
